--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     <style>
       main {
-        margin-top: 60px;
+        margin-top: 80px;
       }
 
       #content {
@@ -27,16 +27,16 @@
       }
 
       form {
-        width: 350px;
-        margin-bottom: 10px;
+        width: 400px;
+        margin-bottom: 20px;
       }
 
       ul {
-        margin-bottom: 0px;
+        margin-bottom: 1px;
       }
 
       #completedTaskList .content {
-        color: grey;
+        color: green;
         text-decoration: line-through;
       }
     </style>
